// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MTreeNode Given a node When the node can and has children and the node is valid Then should render correctly 1`] = `
<li class="m-tree-node">
    <div class="m-tree-node__with-children">
        <div class="m-tree-node__with-children__header"><span class="m-tree-node__with-children__header__icon"></span> <span>Node 3</span></div>
        <ul name="m-tree-node__with-children__body" class="m-tree-node__with-children__body" style="display:none;">
            <li class="m-tree-node m-tree-node__with-children__children">
                <m-link mode="button" class="m-tree-node__single-node"> <span>Node 4</span></m-link>
            </li>
        </ul>
    </div>
</li>
`;

exports[`MTreeNode Given a node When the node can have children but don't have any Then should render correctly 1`] = `
<li class="m-tree-node">
    <div class="m-tree-node__with-children">
        <div class="m-tree-node__with-children__header"><span class="m-tree-node__with-children__header__icon"></span> <span>Node 2</span></div>
        <ul name="m-tree-node__with-children__body" class="m-tree-node__with-children__body" style="display:none;">
            <li class="m-tree-node__with-children__no-children">
                <m-i18n k="m-tree-node:empty"></m-i18n>
            </li>
        </ul>
    </div>
</li>
`;

exports[`MTreeNode Given a node When the node can't have children and the node is valid Then should render correctly 1`] = `
<li class="m-tree-node">
    <a mode="button" class="m-tree-node__single-node"> <span>Node 1</span></a>
</li>
`;
